backup/iptables_backup_1784714471.rules
# Generated by iptables-save v1.8.11 (nf_tables) on Wed Jul 22 11:01:11 2026
*raw
:PREROUTING ACCEPT [45968:8231859]
:OUTPUT ACCEPT [0:0]
-A PREROUTING -d 172.18.0.2/32 ! -i br-53de8015ae03 -j DROP
COMMIT
# Completed on Wed Jul 22 11:01:11 2026
# Generated by iptables-save v1.8.11 (nf_tables) on Wed Jul 22 11:01:11 2026
*filter
:INPUT ACCEPT [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
:DOCKER - [0:0]
:DOCKER-BRIDGE - [0:0]
:DOCKER-CT - [0:0]
:DOCKER-FORWARD - [0:0]
:DOCKER-INTERNAL - [0:0]
:DOCKER-USER - [0:0]
-A FORWARD -j DOCKER-USER
-A FORWARD -j DOCKER-FORWARD
-A DOCKER -d 172.18.0.2/32 ! -i br-53de8015ae03 -o br-53de8015ae03 -p tcp -m tcp --dport 5432 -j ACCEPT
-A DOCKER ! -i docker0 -o docker0 -j DROP
-A DOCKER ! -i br-53de8015ae03 -o br-53de8015ae03 -j DROP
-A DOCKER-BRIDGE -o docker0 -j DOCKER
-A DOCKER-BRIDGE -o br-53de8015ae03 -j DOCKER
-A DOCKER-CT -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-CT -o br-53de8015ae03 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-FORWARD -j DOCKER-CT
-A DOCKER-FORWARD -j DOCKER-INTERNAL
-A DOCKER-FORWARD -j DOCKER-BRIDGE
-A DOCKER-FORWARD -i docker0 -j ACCEPT
-A DOCKER-FORWARD -i br-53de8015ae03 -j ACCEPT
COMMIT
# Completed on Wed Jul 22 11:01:11 2026
# Generated by iptables-save v1.8.11 (nf_tables) on Wed Jul 22 11:01:11 2026
*nat
:PREROUTING ACCEPT [8:828]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [4568:361309]
:POSTROUTING ACCEPT [4568:361309]
:DOCKER - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 172.18.0.0/16 ! -o br-53de8015ae03 -j MASQUERADE
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A DOCKER ! -i br-53de8015ae03 -p tcp -m tcp --dport 5432 -j DNAT --to-destination 172.18.0.2:5432
COMMIT
# Completed on Wed Jul 22 11:01:11 2026
